smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/idl-int-enums-in-v1.smithy
// intEnum shapes may only be used with Smithy version 2 or later.
$version: "1.0"

namespace ns.foo

intEnum IntEnum {
    @enumValue(int: 1)
    FOO

    @enumValue(int: 2)
    BAR
}
